# mantis

./: .gitignore  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-21-agent-proxy-plan.md  2026-04-22-charles-ui.md  2026-04-23-one-click-install.md
docs/superpowers/specs/: 2026-04-21-agent-proxy-design.md  2026-04-22-charles-ui-design.md  2026-04-23-one-click-install-design.md
scripts/: start.sh  stop.sh
src/agent_proxy/: __main__.py  cli.py
src/agent_proxy/agents/: __init__.py  analysis_agent.py  base.py  domain_agent.py  llm.py  mock_agent.py  rule_agent.py  security_agent.py
src/agent_proxy/core/: config.py  models.py  store.py
src/agent_proxy/memory/: episodic.py  procedural.py  semantic.py  system.py  working.py
src/agent_proxy/proxy/: addon.py  cert.py  engine.py
src/agent_proxy/server/: __init__.py  app.py  routes.py  sse.py  ws.py
src/agent_proxy/tui/: app.py  styles.py
src/agent_proxy/tui/screens/: ai.py  cert.py  main.py
src/agent_proxy/tui/widgets/: ai_panel.py  flow_detail.py  flow_list.py  flow_tree.py  status_bar.py
src/agent_proxy/utils/: proxy_config.py  qr.py
src/web/: index.html  package-lock.json  package.json  vite.config.ts
src/web/electron/: main.cjs  main.js
src/web/src/: App.tsx
src/web/src/components/: AIPanel.tsx  DomainTree.tsx  FlowDetail.tsx  FlowList.tsx  QRCertModal.tsx  QuickActions.tsx  StatusBar.tsx
tests/: test_addon.py  test_agents.py  test_config.py  test_memory.py  test_models.py  test_server_routes.py  test_server_sse.py  test_server_ws.py  test_store.py
(+5 files in other folders)
